# parallelstone

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  benchmark_buffer.cpp  build_version_demo.cpp  compile_flags.txt  structure.md  vcpkg.json
.claude/: settings.local.json
.github/workflows/: ci.yml
agent/: CLAUDE.md  cuberite.md  current.md  protocol_versions.md  rule.md
examples/: block_system_demo.cpp  ecs_demo.cpp  version_aware_demo.cpp
include/: platform.hpp
include/ecs/: core.hpp  item.hpp  world_ecs.hpp
include/network/: buffer.hpp  core.hpp  io_uring.hpp  kqueue.hpp  packet_view.hpp  rio.hpp
include/network/protocol/: 1_20_4.hpp  1_21_7.hpp  dispatcher.hpp  version_config.hpp
include/network/protocol/handlers/: configuration.hpp  handshaking.hpp  login.hpp  play.hpp  status.hpp
include/protocol/: data_types.hpp  packet.hpp  packet_registry.hpp  protocol_state.hpp
include/protocol/packets/: handshaking.hpp  login.hpp  login_utils.hpp  play.hpp  status.hpp
include/server/: core.hpp  session.hpp  session_manager.hpp
include/utils/: cipher.hpp  queue.hpp  vector3.hpp
include/world/: biome_system.hpp  block_handler.hpp  block_registry.hpp  block_state.hpp  chunk_section.hpp  compile_time_blocks.hpp  world.hpp  world_ecs_integration.hpp  world_generator.hpp  world_network.hpp  world_performance.hpp
scripts/: build_linux.sh  build_macos.sh  build_windows.bat
src/: main.cpp
src/ecs/: world_ecs.cpp
src/network/: buffer.cpp  core.cpp  io_uring.cpp  kqueue.cpp  packet_view.cpp  rio.cpp
src/protocol/: data_types.cpp  dispatcher.cpp
src/protocol/handlers/: configuration.cpp  handshaking.cpp  login.cpp  play.cpp  status.cpp
src/server/: core.cpp  session.cpp  session_manager.cpp
src/world/: biome_system.cpp  biome_terrain_generator.cpp  biome_transitions.cpp  block_registry.cpp  block_state.cpp  block_type.cpp  chunk_section.cpp  world.cpp  world_ecs_integration.cpp  world_generator.cpp
test/network/: buffer_optimization_test.cpp
test/protocol/: buffer_test.cpp  handshaking_test.cpp  packet_view_safety_test.cpp
test/world/: biome_system_test.cpp  world_benchmark.cpp  world_test.cpp
